# djcode

./: LICENSE  PROJECT.md  README.md  install.sh  pyproject.toml
src/djcode/: __init__.py  __main__.py  app.py  auth.py  buddy.py  cli.py  config.py  context_file.py  docs.py  errors.py  extensions.py  installer.py  mcp_registry.py  onboarding.py  permissions.py  prompt.py  prompt_enhancer.py  provider.py  recipes.py  repl.py  sessions.py  skills.py  stats.py  status.py  tool_router.py  tui.py  tui_hacker.py  tui_panels.py  tui_theme.py  updater.py  voice.py
src/djcode/agents/: __init__.py  architect.py  content_registry.py  executor.py  operator.py  parallel.py  ra.py  registry.py  scout.py  state.py
src/djcode/context/: __init__.py  compressor.py  manager.py  models.py
src/djcode/memory/: __init__.py  embedder.py  manager.py
src/djcode/orchestrator/: __init__.py  context_bus.py  engine.py  events.py  router.py  vector_context.py
src/djcode/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  router.py
src/djcode/tools/: __init__.py  agent_spawn.py  bash.py  file_edit.py  file_read.py  file_write.py  git.py  glob.py  grep.py  notebook.py  parallel_exec.py  task_tracker.py  web_fetch.py  web_search.py
tests/: test_cli.py  test_v4.py
